--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Simple Page</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World This is a great brand new day. This is fantastic!</h1>
     <p>This is a very simple HTML page.</p>
     <p>Welcome to web development!</p>
 </body>
